--- a/.settings/projcfg.ini
+++ b/.settings/projcfg.ini
@@ -1,5 +1,5 @@
 #RT-Thread Studio Project Configuration
-#Fri Apr 04 21:29:22 CST 2025
+#Thu May 08 09:31:48 CST 2025
 project_type=rtt
 chip_name=STM32H750VBTx
 cpu_name=None
@@ -17,6 +17,6 @@ tool_chain=gcc
 uart_name=uart1
 tx_pin_name=PA9
 rtt_nano_path=
-output_project_path=D\:/workTools/RT-ThreadStudio/workspace
+output_project_path=C\:\\0_dev
 hardware_adapter=ST-LINK
 project_name=h750_feature
