USB3300 cherryusb device 适配成功

--- a/.config
+++ b/.config
@@ -750,7 +750,59 @@ CONFIG_PKG_EASYFLASH_VER_NUM=0x40100
 # CONFIG_PKG_USING_ARM_2D is not set
 # CONFIG_PKG_USING_MCUBOOT is not set
 # CONFIG_PKG_USING_TINYUSB is not set
-# CONFIG_PKG_USING_CHERRYUSB is not set
+CONFIG_PKG_USING_CHERRYUSB=y
+CONFIG_PKG_CHERRYUSB_DEVICE=y
+# CONFIG_PKG_CHERRYUSB_DEVICE_FS is not set
+CONFIG_PKG_CHERRYUSB_DEVICE_HS=y
+# CONFIG_PKG_CHERRYUSB_DEVICE_AUTO is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_CUSTOM is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_FSDEV is not set
+CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_ST=y
+# CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_ESP is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_AT is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_GD is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_CUSTOM is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_MUSB_STANDARD is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_MUSB_SUNXI is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_MUSB_CUSTOM is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_BL is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_HPM is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_AIC is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_CH32 is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_PUSB2 is not set
+CONFIG_PKG_CHERRYUSB_DEVICE_CDC_ACM=y
+# CONFIG_PKG_CHERRYUSB_DEVICE_HID is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_MSC is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_AUDIO is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_VIDEO is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_CDC_RNDIS is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_CDC_ECM is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_CDC_NCM is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_DFU is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_NONE is not set
+CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_ACM=y
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_MSC is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_HID_KEYBOARD is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_HID_MOUSE is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_HID_CUSTOM is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_VIDEO is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_AUDIO_V1_MIC_SPEAKER is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_AUDIO_V2_MIC_SPEAKER is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_RNDIS is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_ECM is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_NCM is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_ACM_MSC is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_CDC_ACM_MSC_HID is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_WINUSBV1 is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_WINUSBV2_CDC is not set
+# CONFIG_PKG_CHERRYUSB_DEVICE_TEMPLATE_WINUSBV2_HID is not set
+# CONFIG_PKG_CHERRYUSB_HOST is not set
+CONFIG_PKG_CHERRYUSB_PATH="/packages/system/CherryUSB"
+# CONFIG_PKG_USING_CHERRYUSB_LATEST_VERSION is not set
+CONFIG_PKG_USING_CHERRYUSB_V010300=y
+# CONFIG_PKG_USING_CHERRYUSB_V010200 is not set
+# CONFIG_PKG_USING_CHERRYUSB_V001002 is not set
+CONFIG_PKG_CHERRYUSB_VER="v1.3.0"
 # CONFIG_PKG_USING_KMULTI_RTIMER is not set
 # CONFIG_PKG_USING_TFDB is not set
 # CONFIG_PKG_USING_QPC is not set
